update requests
